<resources>
    <string name="app_name">OMDB viewer</string>
    <string name="search">Search</string>
    <string name="imdb_score">Imdb score</string>
    <string name="_10_10">N/A</string>
    <string name="rotten_tomatoes">Rotten Tomatoes</string>
    <string name="metacritic">Metacritic</string>
    <string name="description">description</string>
    <string name="textview">TextView</string>
    <string name="directed_by">Directed by</string>
    <string name="written_by">Written by</string>
    <string name="starring">Starring</string>
    <string name="dummy_director">N/A</string>
    <string name="dummy_writer">N/A</string>
    <string name="dummy_actor">N/A</string>
    <string name="dummy_rating">N/A</string>
    <string name="movie_details_slash_value">%1$s | %2$s | %3$s | %4$s</string>
    <string name="this_is_a_splash_screen_image">This is a splash screen image</string>
    <string name="this_is_a_search_button">This is a search button</string>
    <string name="this_is_a_search_image">This is a search image</string>
    <string name="this_is_a_no_result_image">This is a no-result image</string>
    <string name="network_error">You are offline. Check your network!</string>
    <string name="this_is_an_movie_poster">This is an movie poster</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="filter_by">Filter by :</string>
</resources>
